--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <!-- brand colors -->
+    <color name="main_black">#FF000000</color>
+    <color name="main_white">#FFFFFFFF</color>
+    <color name="main_blue">#1162FF</color>
+    <color name="main_pink">#FC6BFF</color>
+    <color name="main_sky">#36F3FF</color>
+    <color name="main_green">#00F2B8</color>
+    <color name="main_yellow">#FFDD64</color>
+
+    <!-- extra colors -->
 </resources>
