--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-
     <!-- brand colors -->
     <color name="main_black">#FF000000</color>
     <color name="main_white">#FFFFFFFF</color>
@@ -14,6 +8,7 @@
     <color name="main_sky">#36F3FF</color>
     <color name="main_green">#00F2B8</color>
     <color name="main_yellow">#FFDD64</color>
+    <color name="main_light_blue">#EEF4FF</color>
 
     <!-- extra colors -->
 </resources>
