[#24] EditText 스타일 추가

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="squareButtonRadius">0dp</dimen>
     <dimen name="roundButtonRadius">4dp</dimen>
+
+    <dimen name="defaultEditTextRadius">4dp</dimen>
+    <dimen name="defaultEditTextStrokeWidth">1dp</dimen>
 </resources>
