[#8] 기본 다이얼로그 추가
- 타이틀과 하단 버튼만을 구성하고 있는 CustomContentDialogFragment 추가
- 각종 레이아웃 및 drawable 추가
- 테마로 중복코드 해소

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="text_gray">#828282</color>
     <color name="text_hint_gray">#A9A9A9</color>
 
+    <!-- Line colors -->
+    <color name="line_dialog_divider">#EBECEF</color>
+
 </resources>
