--- a/app/src/main/res/drawable/round_background_12.xml
+++ b/app/src/main/res/drawable/round_background_12.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Todo: 스타일 처리-->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/main_white" />
         </shape>
     </item>
 </layer-list>
