--- a/app/src/main/res/values/styles_dialog.xml
+++ b/app/src/main/res/values/styles_dialog.xml
@@ -14,7 +14,7 @@
         <item name="android:background">@drawable/round_background_12</item>
     </style>
 
-    <style name="Dialog.Title">
+    <style name="Dialog.Title" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/text_default_black</item>
         <item name="android:textSize">22dp</item>
         <item name="android:textStyle">bold</item>
@@ -22,29 +22,19 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="Dialog.Content">
-        <item name="android:layout_gravity">center</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/text_default_black</item>
-        <item name="android:textSize">18dp</item>
-    </style>
-
-    <style name="Dialog.Button">
+    <style name="Dialog.Button" parent="Widget.AppCompat.Button">
         <item name="android:minWidth">0dp</item>
         <item name="android:minHeight">0dp</item>
-        <item name="android:paddingTop">16dp</item>
-        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingVertical">21dp</item>
         <item name="android:textSize">16dp</item>
     </style>
 
     <style name="Dialog.Button.Negative">
-        <item name="android:background">@drawable/round_border_background_4</item>
         <item name="android:textColor">@color/text_default_black</item>
     </style>
 
     <style name="Dialog.Button.Positive">
-        <item name="android:background">@drawable/round_background_4</item>
-        <item name="android:backgroundTint">@color/main_blue</item>
-        <item name="android:textColor">@color/main_white</item>
+        <item name="android:textColor">@color/main_blue</item>
     </style>
+
 </resources>
