[#2] 디폴트 스타일 설정
- 기본 텍스트 컬러 추가
- 기본 텍스트 사이즈 추가

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,9 @@
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/main_white</item>
+        <item name="android:textColor">@color/text_default_black</item>
+        <item name="android:editTextColor">@color/text_default_black</item>
+        <item name="android:textSize">18dp</item>
     </style>
+
 </resources>
