--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="main_light_blue">#EEF4FF</color>
 
     <!-- extra colors -->
+
+    <!-- text colors -->
+    <color name="text_default_black">#333333</color>
+    <color name="text_gray">#828282</color>
+
 </resources>
