--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <!-- text colors -->
     <color name="text_default_black">#333333</color>
     <color name="text_gray">#828282</color>
+    <color name="text_hint_gray">#A9A9A9</color>
 
 </resources>
