--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,10 @@
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/main_white</item>
+        <!-- Text -->
         <item name="android:textColor">@color/text_default_black</item>
         <item name="android:editTextColor">@color/text_default_black</item>
+        <item name="android:textColorHint">@color/text_hint_gray</item>
         <item name="android:textSize">18dp</item>
     </style>
 
