--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="DefaultButton">
-        <attr name="backgroundTint"/>
-        <attr name="roundButton" format="boolean"/>
+    <declare-styleable name="RectangleButton">
+        <attr name="android:background"/>
+        <attr name="android:textColor"/>
     </declare-styleable>
-
-    <attr name="DefaultButtonStyle" format="reference"/>
 </resources>
