[#13] 뱃지가 달린 Round Image View 추가 - 리뷰를 반영한 전체적인 코드 수정

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="BadgeRoundImageView">
-        <attr name="bigCircleImgSrc" format="reference|integer"/>
-        <attr name="bigCircleBackgroundColor" format="reference|integer|color"/>
-        <attr name="bigCircleSize" format="reference|integer|dimension"/>
-        <attr name="badgeImgSrc" format="reference|integer"/>
-        <attr name="badgeBackgroundColor" format="reference|integer|color"/>
+        <attr name="bigCircleImgSrc" format="reference"/>
+        <attr name="bigCircleBackgroundColor" format="color"/>
+        <attr name="badgeImgSrc" format="reference"/>
+        <attr name="badgeBackgroundColor" format="color"/>
         <attr name="badgeSize" format="reference|integer|dimension"/>
     </declare-styleable>
 </resources>
