--- a/app/src/main/res/layout/view_badge_round_image.xml
+++ b/app/src/main/res/layout/view_badge_round_image.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_big_circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:shapeAppearanceOverlay="@style/RoundImageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,6 +17,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:shapeAppearanceOverlay="@style/RoundImageView"
+        app:layout_constraintTop_toTopOf="@id/img_big_circle"
         app:layout_constraintBottom_toBottomOf="@+id/img_big_circle"
-        app:layout_constraintEnd_toEndOf="@+id/img_big_circle"/>
+        app:layout_constraintStart_toStartOf="@id/img_big_circle"
+        app:layout_constraintEnd_toEndOf="@+id/img_big_circle"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintHorizontal_bias="1.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
