--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,18 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/main_white</item>
-        <item name="DefaultButtonStyle">@style/DefaultButton</item>
-    </style>
-
-    <style name="DefaultButton" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">@color/main_white</item>
-        <item name="backgroundTint">@color/selector_button_default</item>
-        <item name="cornerRadius">@dimen/squareButtonRadius</item>
-    </style>
-
-    <style name="DefaultEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/selector_edittext_default</item>
-        <item name="boxStrokeWidth">@dimen/defaultEditTextStrokeWidth</item>
-        <item name="cornerRadius">@dimen/defaultEditTextRadius</item>
+        <item name="android:editTextBackground">@drawable/shape_default_edittext</item>
     </style>
 </resources>
