--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="text_default_black">#333333</color>
     <color name="text_gray">#828282</color>
     <color name="text_hint_gray">#A9A9A9</color>
+    <color name="text_google_login_gray">#686868</color>
 
     <!-- Line colors -->
     <color name="line_dialog_divider">#EBECEF</color>
