[#13] 뱃지가 달린 Round Image View 추가 - 리뷰를 반영한 전체적인 코드 수정

--- a/app/src/main/res/layout/view_badge_round_image.xml
+++ b/app/src/main/res/layout/view_badge_round_image.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:shapeAppearanceOverlay="@style/RoundImageView"
+        android:scaleType="center"
         app:layout_constraintTop_toTopOf="@id/img_big_circle"
         app:layout_constraintBottom_toBottomOf="@+id/img_big_circle"
         app:layout_constraintStart_toStartOf="@id/img_big_circle"
