--- a/app/src/main/res/drawable/selector_round_button.xml
+++ b/app/src/main/res/drawable/selector_round_button.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true">
+    <item android:state_enabled="true" android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/main_blue"/>
+            <corners android:radius="4dp"/>
+        </shape>
+    </item>
+    <item android:state_enabled="true" android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/button_pressed_true"/>
+            <corners android:radius="4dp"/>
         </shape>
     </item>
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/button_enable_false"/>
+            <corners android:radius="4dp"/>
         </shape>
     </item>
 </selector>
