[#22] RectangleButton, RoundButton Style 적용 - styles_button.xml 으로 파일명 변경 - RectangleButton minHeight 추가

--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -7,6 +7,7 @@
         <item name="android:background">@drawable/selector_rectangle_button</item>
         <item name="android:textSize">21dp</item>
         <item name="android:textColor">@drawable/selector_rectangle_button_text</item>
+        <item name="android:minHeight">88dp</item>
     </style>
 
     <style name="RoundButtonTheme">
