[#30] 로그인 기능 추가
- ProfileEditActivity 추가
- 이름과 닉네임 입력이 가능하고, ViewModel 의 UiModel 을 뷰에 반영시키도록 함

--- a/app/src/main/res/values/styles_edittext.xml
+++ b/app/src/main/res/values/styles_edittext.xml
@@ -3,4 +3,15 @@
     <style name="BorderEditText" parent="Widget.AppCompat.EditText">
         <item name="android:background">@drawable/shape_border_edittext</item>
     </style>
+    
+    <style name="Profile" />
+
+    <!-- Todo: 배경 이미지 변경. BorderEditText 머지 되면 parent 로 둬야함. -->
+    <style name="Profile.Input">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:paddingHorizontal">21dp</item>
+        <item name="android:paddingVertical">15dp</item>
+        <item name="android:background">@null</item>
+    </style>
 </resources>
