[#30] 로그인 기능 추가
- 성별 선택 기능 추가
- 바뀐 디자인 가이드 소폭 적용

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_profile"
-        style="@style/Toolbar.DefaultStyle"
+        style="@style/Toolbar.DividerStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,8 +28,8 @@
 
     <com.moyerun.moyeorun_android.views.BadgeRoundImageView
         android:id="@+id/badgeimageview_profile_image"
-        android:layout_width="73dp"
-        android:layout_height="73dp"
+        android:layout_width="112dp"
+        android:layout_height="112dp"
         android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:paddingHorizontal="21dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@id/badgeimageview_profile_image">
 
         <TextView
+            style="@style/Profile.InputLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/profile_name" />
@@ -60,6 +61,7 @@
             android:inputType="text" />
 
         <TextView
+            style="@style/Profile.InputLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -74,9 +76,45 @@
             android:hint="@string/profile_nickname"
             android:inputType="text" />
 
+        <TextView
+            style="@style/Profile.InputLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/profile_gender" />
+
+        <RadioGroup
+            android:id="@+id/radiogroup_profile_gender"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radiobutton_profile_woman"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/selector_gender_woman"
+                android:button="@android:color/transparent" />
+
+            <Space
+                android:layout_width="9dp"
+                android:layout_height="match_parent" />
+
+            <RadioButton
+                android:id="@+id/radiobutton_profile_man"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/selector_gender_man"
+                android:button="@android:color/transparent" />
+
+        </RadioGroup>
+
     </LinearLayout>
 
-    <Button
+    <com.moyerun.moyeorun_android.views.RoundButton
         android:id="@+id/button_profile_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
