--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -20,6 +20,6 @@
         <item name="android:background">@drawable/selector_round_button</item>
         <item name="android:textSize">21dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@drawable/selector_round_button_text</item>
+        <item name="android:textColor">@color/main_white</item>
     </style>
 </resources>
