--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -3,12 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/home_nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/home_fragment">
 
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/home_fragment"
         android:name="com.moyerun.moyeorun_android.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_create_room"
+            app:destination="@id/create_room_activity" />
+
+    </fragment>
+
+    <activity
+        android:id="@+id/create_room_activity"
+        android:name="com.moyerun.moyeorun_android.home.CreateRoomActivity"
+        tools:layout="@layout/activity_create_room" />
 
 </navigation>
