--- a/app/src/main/res/values/styles_profile.xml
+++ b/app/src/main/res/values/styles_profile.xml
@@ -8,6 +8,10 @@
         <item name="android:paddingVertical">15dp</item>
     </style>
 
+    <style name="Profile.Input.Wrong">
+        <item name="android:background">@drawable/shape_border_warning_edittext</item>
+    </style>
+
     <style name="Profile.InputLabel" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
