--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
         android:text="@string/login_button_google"
         android:textColor="@color/text_google_login_gray"
         android:textSize="18dp"
+        android:background="@drawable/shape_border_edittext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
